test_files/invalid/024-self-as-variable-assign.man
def main()
    self = 5
end
